<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2021 Dynamia Soluciones IT S.A.S - NIT 900302344-1
  ~ Colombia / South America
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <name>DynamiaTools</name>
    <modelVersion>4.0.0</modelVersion>
    <groupId>tools.dynamia</groupId>
    <artifactId>tools.dynamia.parent</artifactId>
    <version>4.1.0</version>
    <packaging>pom</packaging>
    <organization>
        <name>Dynamia Soluciones IT SAS</name>
        <url>http://www.dynamiasoluciones.com</url>
    </organization>
    <inceptionYear>2009</inceptionYear>
    <url>https://www.dynamia.tools</url>
    <description>Fullstack web framework for java web applicacions</description>

    <developers>
        <developer>
            <name>Mario Serrano Leones</name>
            <email>mario@dynamiasoluciones.com</email>
            <organization>Dynamia Soluciones IT</organization>
            <organizationUrl>https://www.dynamiasoluciones.com</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/dynamiatools/framework</url>
    </scm>

    <modules>
        <module>commons</module>
        <module>integration</module>
        <module>navigation</module>
        <module>actions</module>
        <module>io</module>
        <module>templates</module>
        <module>domain</module>
        <module>domain-jpa</module>
        <module>domain-neo4j</module>
        <module>crud</module>
        <module>ui</module>
        <module>viewers</module>
        <module>reports</module>
        <module>web</module>
        <module>app</module>

        <!-- ZK Backend -->
        <module>zk</module>
        <module>zk-actions</module>
        <module>zk-crud</module>
        <module>zk-reports</module>
        <module>zk-viewers</module>
        <module>zk-app</module>

    </modules>

    <properties>
        <main.baseUri>${project.baseUri}</main.baseUri>
        <springboot.version>2.6.8</springboot.version>
        <neo4jogm.version>3.2.32</neo4jogm.version>

        <!-- Web -->
        <zk.version>9.6.0.2</zk.version>
        <jsonrpc.version>1.6</jsonrpc.version>
        <httpcomponents.version>4.5.13</httpcomponents.version>
        <dom4j.version>2.1.3</dom4j.version>

        <!--Reports -->
        <jasperreports.version>6.9.0</jasperreports.version>
        <itext.version>2.1.7</itext.version>
        <poi.version>5.2.2</poi.version>
        <snakeyaml.version>1.30</snakeyaml.version>
        <zing.version>3.4.1</zing.version>

        <!--Logging -->
        <slf4j.version>1.7.36</slf4j.version>


        <java.version>11</java.version>
        <target.version>11</target.version>
        <maven.compiler>3.8.1</maven.compiler>
        <source.encoding>UTF-8</source.encoding>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${target.version}</target>
                    <encoding>${source.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- General dependencies for standard applications -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
